🔧 : add com.sun.jndi.ldap module export
this module is required by spring-ldap and is not exported by the jdk
since version 16